--- a/css/style.css
+++ b/css/style.css
@@ -25,19 +25,19 @@ header{
 }
 
 #logo{
-    font-size: 32px;
+    font-size: 2.5rem;
     text-align: left;
     margin-left: 25px;
     transition: ease-in-out 0.7s;
 }
 
 #logo:hover{
-    transform: scale(1.2);
+    transform: scale(1.12);
 }
 
 nav a{
     padding: 1rem 4%;
-    font-size: 32px;
+    font-size: 2.5rem;
     transition: color 0.3s ease, border-bottom 0.3s ease;
 }
 nav a:hover,
@@ -60,16 +60,51 @@ nav a#active{
     display: none;
     background-color: transparent;
 }
+
 #dropdown-nav li{
     margin: 5px;
     padding: 5px;
 }
+
 #main-nav li:hover #dropdown-nav{
     display: block;
     position: absolute;
-    right: 25px;
+    right: 20px;
 }
+
 #dropdown-color:hover{
     color: purple;
     border-bottom: 3px solid transparent;
+}
+
+#dropdown{
+    font-size: 1.75rem;
+}
+
+main{
+    color: white;
+}
+
+/* Test */
+
+span{
+    color: #b74b4b;
+}
+
+#typing-text{
+    font-size: 34px;
+}
+
+#typing-text span{
+    position: relative;
+    color: #b74b4b;
+}
+
+#typing-text span::before{
+    content: "Software Developer Student";
+    color: #b74b4b;
+}
+
+#typing-text span::after{
+    content: "";
 }
