--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,62 @@ th{
 .hidden.show{
     opacity: 1;
 }
+
+/* pages */
+#content-header{
+    margin-top: 25px;
+    margin-left: 75px;
+}
+/* technieken */
+#code-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 25px;
+    margin-left: 50px;
+}
+
+pre{
+    white-space: nowrap;
+    max-width: 95%;
+}
+
+.codename{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    background-color: #373737;
+    padding: 1rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+
+code{
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    white-space: pre;
+    display: block;
+    margin-bottom: 1em;
+    box-shadow: #031a16 10px 10px 10px;
+}
+#code-container p{
+    width: 150%;
+}
+
+#code-container-2{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 75px;
+    margin-left: 50px;
+}
+
+#code-container-2 p{
+    margin-top: 5rem;
+    width: 100%;
+}
+
+#content{
+    margin-top: 25px;
+    margin-left: 125px;
+}
